--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+.search {
+  @apply mx-auto h-8 bg-white shadow-md rounded-lg mt-4 flex justify-center items-center p-3;
+  width: 90%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.topNav {
+  @apply flex justify-between items-center mt-6 overflow-x-scroll;
+  width: 100%;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.card {
+  @apply rounded-2xl mx-auto shadow-lg rounded-xl;
+  width: 98%;
 }
